--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas-pro": "^1.5.12",
     "http-status-codes": "^2.3.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-to-print": "^3.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "wretch": "^3.0.0",
