--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@uiw/react-color": "^2.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^6.1.1",
     "html2canvas-pro": "^1.5.12",
     "http-status-codes": "^2.3.0",
     "jspdf": "^3.0.3",
