--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-pdf/renderer": "^4.3.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "@uiw/react-color": "^2.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
